# Tesseract.android

./: .gitignore  Cargo.toml  DAPP.MD  README.md  RUST.MD  WALLET.MD  build.gradle  local.properties.example  settings.gradle
examples/app/: build.gradle
examples/app/src/main/: AndroidManifest.xml
examples/app/src/main/res/layout/: activity_main.xml
examples/app/src/main/res/menu/: menu_main.xml
examples/app/src/main/res/navigation/: nav_graph.xml
examples/app/src/main/res/values/: strings.xml
examples/app_native/: Cargo.toml
examples/app_native/src/: application.rs  core.rs  delegate.rs  error.rs  lib.rs  service.rs
examples/native/app/: build.gradle
examples/native/app/src/main/: AndroidManifest.xml
examples/native/app/src/main/res/values/: strings.xml  themes.xml
examples/native/wallet/: build.gradle
examples/native/wallet/src/main/: AndroidManifest.xml
examples/native/wallet/src/main/res/values/: strings.xml
examples/rust/app/: build.gradle
examples/rust/app/src/main/: AndroidManifest.xml
examples/rust/app/src/main/res/layout/: activity_main.xml
examples/rust/app/src/main/res/values/: colors.xml  strings.xml
examples/rust/app_native/: Cargo.toml
examples/rust/app_native/src/: application.rs  core.rs  lib.rs
examples/rust/app_rust/: Cargo.toml
examples/rust/app_rust/src/: application.rs  core.rs  delegate.rs  lib.rs
examples/rust/wallet/: build.gradle
examples/rust/wallet/src/main/: AndroidManifest.xml
examples/rust/wallet/src/main/res/layout/: activity_main.xml  activity_sign.xml
examples/rust/wallet/src/main/res/menu/: menu_main.xml
examples/rust/wallet/src/main/res/values/: colors.xml  strings.xml  themes.xml
examples/rust/wallet/src/main/res/values-night/: themes.xml
examples/rust/wallet_native/: Cargo.toml
examples/rust/wallet_native/src/: core.rs  lib.rs  service.rs  signature_provider.rs  ui.rs
examples/rust/wallet_rust/: Cargo.toml
examples/rust/wallet_rust/src/: error.rs  lib.rs  service.rs  signature_provider.rs
examples/wallet/: build.gradle
examples/wallet/src/main/: AndroidManifest.xml
examples/wallet/src/main/res/layout/: activity_main.xml  activity_sign.xml  content_sign.xml
examples/wallet/src/main/res/menu/: menu_main.xml
examples/wallet/src/main/res/navigation/: nav_graph.xml  nav_graph2.xml
examples/wallet/src/main/res/values/: strings.xml
examples/wallet_native/: Cargo.toml
examples/wallet_native/src/: core.rs  lib.rs  service.rs  signature_provider.rs  ui.rs
gradle/wrapper/: gradle-wrapper.properties
java/client/: build.gradle
java/client-transport/: build.gradle
java/client-transport-ipc/: build.gradle
java/common/: build.gradle
java/common-transport/: build.gradle
java/common-transport-ipc/: build.gradle
java/common/src/main/java/one/tesseract/: TesseractCommon.kt
java/crabdroid/: build.gradle
java/detached-activity/: README.MD  build.gradle
java/interop-rust/: build.gradle
java/service/: build.gradle
java/service-transport/: build.gradle
java/service-transport-ipc/: build.gradle
java/tesseract/: build.gradle
java/tesseract-android/: build.gradle
java/tesseract-android-service/: build.gradle
java/tesseract-android/src/main/java/one/tesseract/: TesseractBase.kt  UserCancelledException.kt
java/tesseract-base/: build.gradle
java/tesseract-ipc/: build.gradle
java/tesseract-ipc-client/: build.gradle
java/tesseract-ipc-client/src/main/: AndroidManifest.xml
java/tesseract-ipc-service/: build.gradle
java/tesseract-ipc-service/src/main/: AndroidManifest.xml
java/tesseract-ipc/src/main/: AndroidManifest.xml
java/tesseract-service/: build.gradle
java/tesseract-transport-service/: build.gradle
rust/base/: Cargo.toml
rust/base/src/: context.rs  error.rs  lib.rs  newe.rs  tesseractify.rs
rust/base/src/client/: applicator.rs
rust/base/src/error/: _bucket_error_old.rs  _bucket_might_be_useful.rs  android.rs  exception.rs  mod.rs  tesseract.rs
rust/base/src/service/: applicator.rs  mod.rs
rust/crabdroid/: Cargo.toml  README.MD
rust/crabdroid/src/: bi_consumer.rs  contexted_global.rs  env.rs  exception.rs  iter.rs  lib.rs  thread_pool.rs
rust/crabdroid/src/error/: context.rs  exception.rs  global.rs
rust/crabdroid/src/future/: completion_stage.rs  future_ext.rs  into_java.rs  mod.rs
rust/crabdroid/src/object/: convertible.rs  desc.rs  mod.rs  wrappable.rs
rust/interop/: Cargo.toml
rust/interop/src/: bi_consumer.rs  collection.rs  context.rs  contexted_global.rs  env.rs  error.rs  exception.rs  jfuture.rs  lib.rs  pointer.rs
rust/interop/src/error/: composite.rs  context.rs  exception.rs  local.rs  mod.rs
rust/interop/src/future/: completable_future.rs  completion_stage.rs  future_ext.rs  into_java.rs  mod.rs
rust/interop/src/object/: wrappable.rs
rust/interop_android/: Cargo.toml
rust/interop_android/src/: completable_future.rs  errors.rs  jfuture.rs
rust/ipc/: Cargo.toml
rust/ipc/src/: lib.rs
rust/ipc/src/client/: applicator.rs  connection.rs  ipc.rs  mod.rs  response.rs  transceiver.rs  transport.rs
rust/ipc/src/service/: ipc.rs  mod.rs  old_transport_now_example.rs  processor.rs  rust_transport_applicator_example.rs  transport.rs
rust/sdk/: Cargo.toml
rust/sdk/src/: client.rs  lib.rs  service.rs
rust/tesseract/: Cargo.toml
rust/tesseract/src/: context.rs  error.rs  lib.rs
rust/tesseract/src/service/: mod.rs  service.rs  tesseract.rs
rust/tesseract/src/service/protocol/: mod.rs  test.rs
rust/tesseract/src/service/protocol/test/: jservice.rs  service.rs
rust/tesseract/src/service/transport/: ipc.rs  mod.rs
rust/tesseract_ipc_android_client/: Cargo.toml
rust/tesseract_ipc_android_client/src/: connection.rs  lib.rs  transport.rs
rust/transport/: Cargo.toml
rust/transport/src/: lib.rs
rust/transport/src/client/: mod.rs  status.rs
rust/transport/src/client/connection/: jconnection.rs  mod.rs  rjconnection.rs
rust/transport/src/client/transport/: java_transport.rs  jtransport.rs  mod.rs  rjtransport.rs
rust/transport/src/service/: bound.rs  mod.rs  processor.rs  transport.rs
(+175 files in other folders)
