# Licensed under the Apache License, Version 2.0.

[workspace.package]
authors = ["Daniel Leping", "Yehor Popovych", "Tesseract Systems, Inc."]
edition = "2021"
version = "0.5.5"
license = "Apache-2.0"
readme = "README.MD"
repository = "https://github.com/tesseract-one/Tesseract.android"
documentation = "https://github.com/tesseract-one/Tesseract.android"
homepage = "https://github.com/tesseract-one/"

[workspace]

members = [
    "rust/crabdroid", #primitives for easier Java/Rust interop

    "rust/base", #basic primitives of Tesseract on Android
    "rust/transport", #transport runtime bindings for Java/Kotlin transports

    "rust/ipc", #IPC transport

    "rust/sdk", #aggregate crate for android dApp/Wallet integration in Rust
    "rust/library", #dylib that has everything java/kotlin only (nu rust) apps need in runtime

    "examples/rust/app_rust", #example of how to use Tesseract in a dApp in Rust
    "examples/rust/wallet_rust", #example of how to use Tesseract in a Wallet in Rust
]

resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
errorcon = "0.1"
futures = "0.3"
thiserror = "1.0"

#android interop
jni = "0.20"
jni_fn = "0.1"

#logger
log = "0.4"
log-panics = "2"
android_logger = "0.13"

#tesseract
#tesseract = { path = "../Tesseract.rs/tesseract" }
tesseract = { git = "https://github.com/tesseract-one/Tesseract.rs", branch="master" }

#protocols
#tesseract-protocol-test = { path = "../Tesseract.rs/protocols/test" }
#tesseract-protocol-substrate = { path = "../Tesseract.rs/protocols/substrate" }
tesseract-protocol-test = { git = "https://github.com/tesseract-one/Tesseract.rs", branch = "master" }
tesseract-protocol-substrate = { git = "https://github.com/tesseract-one/Tesseract.rs", branch = "master" }