# Licensed under the Apache License, Version 2.0.

[workspace.package]
authors = ["Daniel Leping", "Yehor Popovych", "Tesseract Systems, Inc."]
edition = "2021"
version = "0.5.6"
license = "Apache-2.0"
readme = "README.MD"
repository = "https://github.com/tesseract-one/Tesseract.android"
documentation = "https://github.com/tesseract-one/Tesseract.android"
homepage = "https://github.com/tesseract-one/"
categories = ["API-bindings", "authentication", "network-programming"]
keywords = ["blockchain", "dApp", "wallet", "mobile", "bridge"]

[workspace]

members = [
    "rust/*",

    "examples/rust/app_rust", #example of how to use Tesseract in a dApp in Rust
    "examples/rust/wallet_rust", #example of how to use Tesseract in a Wallet in Rust
]

resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
errorcon = "0.1"
futures = "0.3"
thiserror = "1.0"

#android interop
jni = "0.20"
jni_fn = "0.1"

#logger
log = "0.4"
log-panics = "2"
android_logger = "0.13"

#tesseract
tesseract-one = "0.5"

#protocols
tesseract-protocol-test = "0.5"
tesseract-protocol-substrate = "0.5"

#local
crabdroid = { path = "rust/crabdroid", version = "0.3.0"}
tesseract-android-base = { path = "rust/base", version = "0.5.6"}
tesseract-android-transport = { path = "rust/transport", version = "0.5.6"}
tesseract-android-library = { path = "rust/library", version = "0.5.6"}
tesseract-android-ipc = { path = "rust/ipc", version = "0.5.6"}
tesseract-android = { path = "rust/sdk", version = "0.5.6"}