# Licensed under the Apache License, Version 2.0.

[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
jni = "0.19.0"
jni_fn = "0.1.0"
log = "0.4.17"
android_log = "0.1.3"
futures = "0.3.21"
# lazy_static = "1.4.0"

interop_android = { path = "../../rust/interop" }
tesseract_ipc_android = { path = "../../rust/ipc", features=["service"]}
tesseract = {git = "https://github.com/tesseract-one/Tesseract.rs", branch="restructure", features=["service"]}
tesseract-protocol-test = {git = "https://github.com/tesseract-one/Tesseract.rs", branch="restructure", features=["service"]}

serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"

[lib]
crate_type = ["cdylib"]
