# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-android-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["tesseract/client"]
service = ["tesseract/service"]

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }

jni = { workspace = true }
crabdroid = { path = "../crabdroid" }

tesseract = { workspace = true }
