# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-android-base"
description = "Tesseract base APIs for Android. Check tesseract-android crate, this crate is reexported there."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["tesseract-one/client"]
service = ["tesseract-one/service"]

[dependencies]
thiserror.workspace = true
log = { workspace = true, features = ["std"] }

jni.workspace = true
crabdroid.workspace = true

tesseract-one.workspace = true
