# Licensed under the Apache License, Version 2.0.

[package]
name = "crabdroid"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Android easy(er) interop for Rust. Especially helpful with async operations, error handling, collections, etc."
homepage = "https://github.com/tesseract-one/"
repository = "https://github.com/tesseract-one/Tesseract.android"
readme = "README.MD"
authors = ["Daniel Leping", "Tesseract Systems, Inc."]
categories = ["development-tools::ffi", "external-ffi-bindings", "os"]
keywords = ["android", "interop", "jni", "futures", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
jni = "0.20.0"
jni_fn = "0.1.0"
log = "0.3.9"
futures = {version = "0.3.21", features = ["thread-pool"]}
