# Licensed under the Apache License, Version 2.0.

[package]
name = "crabdroid"
version = "0.3.0"
description = "Android easy(er) interop for Rust. Especially helpful with async operations, error handling, collections, etc."
categories = ["development-tools::ffi", "external-ffi-bindings", "os"]
keywords = ["android", "interop", "jni", "futures", "async"]

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
thread-pool = ["futures/thread-pool"]

[dependencies]
thiserror = { workspace = true }

jni = { workspace = true }
jni_fn = { workspace = true }

log = { workspace = true }

futures = { workspace = true }
