# Licensed under the Apache License, Version 2.0.

[package]
name = "interop_android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
jni = "0.20.0"
jni_fn = "0.1.0"
log = "0.4.17"
android_log = "0.1.3"
futures = {version = "0.3.21", features = ["thread-pool"]}

#[lib]
#crate_type = ["cdylib"]
