# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-android-ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["tesseract/client", "tesseract-android-transport/client", "dep:async-trait"]
service = ["tesseract/service", "tesseract-android-transport/service"]

[dependencies]
async-trait = {version="0.1", optional=true}
futures = "0.3"

log = "0.4"

jni = "0.20"
crabdroid = { path = "../crabdroid" }

#tesseract = { path = "../../../Tesseract.rs/tesseract"} #
tesseract = {git = "https://github.com/tesseract-one/Tesseract.rs", branch="master"}
tesseract-android-transport = { path = "../transport" }
