# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-android-ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["tesseract/client", "tesseract-android-transport/client", "dep:async-trait", "dep:jni_fn"]
service = ["tesseract/service", "tesseract-android-transport/service"]

[dependencies]
async-trait = { workspace = true, optional = true }

log = { workspace = true }

#android interop
jni = { workspace = true }
jni_fn = { workspace = true, optional = true }
crabdroid = { path = "../crabdroid" }

tesseract = { workspace = true }
tesseract-android-base = { path = "../base" }
tesseract-android-transport = { path = "../transport" }
