# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-android-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["tesseract-one/client", "tesseract-android-transport/client", "dep:async-trait", "dep:jni_fn"]
service = ["tesseract-one/service", "tesseract-android-transport/service"]

[dependencies]
async-trait = { workspace = true, optional = true }

log.workspace = true

#android interop
jni.workspace = true
jni_fn = { workspace = true, optional = true }
crabdroid.workspace = true

tesseract-one.workspace = true
tesseract-android-base.workspace = true
tesseract-android-transport.workspace = true
