# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client", "service"]
client = ["tesseract/client", "dep:async-trait"]
service = ["tesseract/service", "dep:async-trait"]

[dependencies]
thiserror = "1.0.31"
jni = "0.20.0"
jni_fn = "0.1.0"
log = "0.3.9"
android_log = "0.1.3"
futures = "0.3.21"
# lazy_static = "1.4.0"

tesseract = { path = "/Users/daniel/repo/Tesseract.rs/tesseract", features=["client", "service"]} #{git = "https://github.com/tesseract-one/Tesseract.rs", branch="master", features=["client", "service"]}
tesseract-protocol-test = { path = "/Users/daniel/repo/Tesseract.rs/protocols/test", features=["client", "service"]} #{git = "https://github.com/tesseract-one/Tesseract.rs", branch="master", features=["client", "service"]}

interop_android = { path = "../interop" }
tesseract-android-base = { path = "../base", features=["client", "service"]}
tesseract_ipc_android = { path = "../ipc", features=["client", "service"]}

serde = { version = "1.0", features = ["derive"] }
async-trait = {version="0.1", optional=true}

[lib]
name = "tesseracta"
crate-type = ["cdylib", "rlib"]
