# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract_ipc_android_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
jni = "0.19.0"
jni_fn = "0.1.0"
log = "0.4.17"
android_log = "0.1.3"
futures = "0.3.21"

async-trait = "0.1"
interop_android = { path = "../interop_android" }
tesseract = {git = "https://github.com/tesseract-one/Tesseract.rs"}
tesseract-client = {git = "https://github.com/tesseract-one/Tesseract.rs"}
