# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-android-transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["tesseract/client", "tesseract-android-base/client", "dep:async-trait"]
service = ["tesseract/service", "tesseract-android-base/service"]

[dependencies]
async-trait = { workspace = true, optional = true }

log = { workspace = true }
errorcon = { workspace = true }

jni = { workspace = true }
jni_fn = { workspace = true }
crabdroid = { path = "../crabdroid" }

tesseract = { workspace = true }
tesseract-android-base = { path = "../base" }
