# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-android-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["tesseract/client", "tesseract-android-base/client", "dep:async-trait"]
service = ["tesseract/service", "tesseract-android-base/service"]

[dependencies]
async-trait = { workspace = true, optional = true }

log = { workspace = true }
errorcon = { workspace = true }

jni = { workspace = true }
jni_fn = { workspace = true }
crabdroid = { path = "../crabdroid" }

tesseract = { workspace = true }
tesseract-android-base = { path = "../base" }
