# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-android-transport"
description = "Crate with transport related Tesseract APIs for Android"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["tesseract-one/client", "tesseract-android-base/client", "dep:async-trait"]
service = ["tesseract-one/service", "tesseract-android-base/service"]

[dependencies]
async-trait = { workspace = true, optional = true }

log.workspace = true
errorcon.workspace = true

jni.workspace = true
jni_fn.workspace = true
crabdroid.workspace = true

tesseract-one.workspace = true
tesseract-android-base.workspace = true
