# Licensed under the Apache License, Version 2.0.

[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"

#logger
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
android_logger = "0.13"

futures = "0.3" #for thread pool

#android interop
jni = "0.20"
jni_fn = "0.1"
crabdroid = { path = "../../../rust/crabdroid", features = ["thread-pool"]}

#tesseract
tesseract = { workspace = true, features=["client"] }
tesseract-protocol-test = { workspace = true, features=["client"] }
tesseract-android = { path = "../../../rust/sdk", features=["client"] }

[lib]
crate_type = ["cdylib"]
