# Licensed under the Apache License, Version 2.0.

[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }

#logger
log = { workspace = true }
log-panics = { workspace = true, features = ["with-backtrace"] }
android_logger = { workspace = true }

futures = { workspace = true } #for thread pool

#android interop
jni = { workspace = true }
jni_fn = { workspace = true }
crabdroid = { path = "../../../rust/crabdroid", features = ["thread-pool"]}

#tesseract
tesseract = { workspace = true, features=["client"] }
tesseract-protocol-test = { workspace = true, features=["client"] }
tesseract-android = { path = "../../../rust/sdk", features=["client"] }

[lib]
crate_type = ["cdylib"]
