# Licensed under the Apache License, Version 2.0.

[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }

#logger
log = { workspace = true }
log-panics = { workspace = true, features = ["with-backtrace"] }
android_logger = { workspace = true }

futures = { workspace = true } #for thread pool

#android interop
jni = { workspace = true }
jni_fn = { workspace = true }
crabdroid = { workspace = true, features = ["thread-pool"]}

#tesseract
tesseract-one = { workspace = true, features=["client"] }
tesseract-protocol-test = { workspace = true, features=["client"] }
tesseract-android = { workspace = true, features=["client"] }

[lib]
crate_type = ["cdylib"]
