# Licensed under the Apache License, Version 2.0.

[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"

#logger
log = "0.3.9"
log-panics = { version = "1.2", features = ["with-backtrace"]}
android_log = "0.1.3"

jni = "0.20.0"
jni_fn = "0.1.0"
crabdroid = { path = "../../../rust/crabdroid" }

tesseract = { path = "/Users/daniel/repo/Tesseract.rs/tesseract", features=["service"]} #tesseract = {git = "https://github.com/tesseract-one/Tesseract.rs", branch="master", features=["service"]}
tesseract-protocol-test = { path = "/Users/daniel/repo/Tesseract.rs/protocols/test", features=["service"]} #tesseract-protocol-test = {git = "https://github.com/tesseract-one/Tesseract.rs", branch="master", features=["service"]}
tesseract-android = { path = "../../../rust/sdk", features=["service"]}

[lib]
crate_type = ["cdylib"]
