# Licensed under the Apache License, Version 2.0.

[package]
name = "wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
errorcon = { workspace = true }

#logger
log = { workspace = true }
log-panics = { workspace = true, features = ["with-backtrace"] }
android_logger = { workspace = true }

#android interop
jni = { workspace = true }
jni_fn = { workspace = true }
crabdroid = { path = "../../../rust/crabdroid", features = ["thread-pool"]}

#tesseract
tesseract = { workspace = true, features=["service"] }
tesseract-protocol-test = { workspace = true, features=["service"] }

tesseract-android = { path = "../../../rust/sdk", features=["service"]}

[lib]
crate_type = ["cdylib"]
